4.13 (Work-in-progress): added support for importing and exporting XAO files;
new quasi-transfinite 2d meshes (with fans); bug fixes.

* New API functions: occ/getDistance, mesh/removeElements,
  option/restoreDefaults, logger/getMemory, logger/getTotalMemory.

4.12.2 (January 21, 2024): small bug fixes.

4.12.1 (January 11, 2024): small bug fixes.

4.12.0 (December 21, 2023): new high-order mesh optimisation mode for periodic
meshes; new element qualities available through API; new IGES export; new volume
glyph; OCC curve loops can now be oriented based on the sign of the first curve;
better mesh node visualization; added suppport for model attributes in MSH2
files; new mesh renumbering capabilities in the API; new GAMBIT mesh reader;
replaced Geometry.OCCSafeUnbind with more flexible Geometry.OCCFastUnbind (which
can be set for boolean operations as well); added support for editing STEP
headers; small bug fixes.

* New API functions: model/getEntitiesForPhysicalName, mesh/computeRenumbering,
  mesh/getVisibility.

* Incompatible API changes: new optional argument to occ/addCircleArc,
  mesh/renumberNodes, mesh/renumberElements and view/getListData; new optional
  "interruptible" argument to gmsh.initialize() in Python

4.11.1 (December 21, 2022): Mesh.TransfiniteTri improvements; small bug fixes.

4.11.0 (November 6, 2022): new Fortran API; improved copying ("Duplicata") of
multiple shapes with OCC; reduced default order for OCC surface filling;
arbitrary string attributes can now be stored in models and MSH files; new
Radioss export; added ability to specify spline tangents with OCC; new option
Mesh.SaveWithoutOrphans to prune orphan entities (e.g. geometrical construction
points) from MSH4 files; major overhaul of the reference manual; new official
macOS ARM builds; small bug fixes.

* New API functions: model/getAttributeNames, model/getAttribute,
  model/setAttribute, model/removeAttribute
