@@ -34,9 +34,9 @@ Toulorge (high order mesh optimizer, new CGNS IO), Max Orok (binary PLY), Marek
 Wojciechowski (PyPi packaging), Maxence Reberol (automatic transfinite, quad
 meshing tools), Michael Ermakov (Gambit IO, Fortran API, TransfiniteTri,
 boundary layer fans), Alex Krasner (X3D export), Giannis Nikiteas (Fortran API),
-Paul Sharp (Radioss export), Marco Failla (API additions). See comments in the
-sources for more information. If we forgot to list your contributions please
-send us an email!
+Paul Sharp (Radioss export), Marco Failla (2D fillet/offset and API
+additions). See comments in the sources for more information. If we forgot to
+list your contributions please send us an email!
 
 Thanks to the following folks who have contributed by providing fresh ideas on
 theoretical or programming topics, who have sent patches, requests for changes
