@@ -1,8 +1,9 @@
 4.13 (Work-in-progress): added support for importing and exporting XAO files;
 new quasi-transfinite 2d meshes (with fans); bug fixes.
 
-* New API functions: occ/getDistance, mesh/removeElements,
-  option/restoreDefaults, logger/getMemory, logger/getTotalMemory.
+* New API functions: occ/getDistance, occ/fillet2D, occ/chamfer2D,
+  occ/offsetCurve, mesh/removeElements, option/restoreDefaults,
+  logger/getMemory, logger/getTotalMemory.
 
 4.12.2 (January 21, 2024): small bug fixes.
 
